# rc-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rc_mcp_server/: __init__.py  client.py  event_queue.py  models.py  server.py  webhook_server.py
tests/: conftest.py  test_client.py  test_models.py  test_phase3.py  test_phase4.py  test_server.py
