[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rc-mcp-server"
version = "0.3.0"
description = "RevenueCat MCP server — expose RC APIs as tools, resources, and prompts for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zarpa", email = "zarpa@zarpa.cat" }]
keywords = ["revenuecat", "mcp", "model-context-protocol", "ai", "agents", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
rc-mcp-server = "rc_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/zarpa-cat/rc-mcp-server"
Repository = "https://github.com/zarpa-cat/rc-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/rc_mcp_server"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
